--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-filter==21.1
 django-heroku==0.3.1
 django-widget-tweaks==1.4.12
 gunicorn==20.1.0
+Pillow==9.0.1
 psycopg2==2.9.3
 python-decouple==3.6
 virtualenv==20.14.1
